Prettify main page

--- a/doc_filler/apps/docs_processor/templates/doc_processor/home.html
+++ b/doc_filler/apps/docs_processor/templates/doc_processor/home.html
@@ -1,5 +1,41 @@
-<form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ form }}
-    <input type="submit" value="Submit">
-</form>
+{% load static %}
+<link rel="stylesheet" href="{% static 'boot/css/bootstrap.min.css' %}">
+<link rel="stylesheet" href="{% static 'boot/css/bootstrap.css' %}">
+<body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top mb-5">
+    <a class="navbar-brand" href="#">DocFiller</a>
+    <div class="collapse navbar-collapse" id="navbar">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">GitHub</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+<main role="main" class="container">
+    <div class="card align-items-center w-100 p-3 text-center">
+        <h1>Выберите файлы</h1>
+        <form method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            <table class="table table-borderless text-center">
+                <tbody>
+                <tr>
+                    <td><h4>{{ form.doc_file.label }}</h4></td>
+                    <td><h4>{{ form.table_file.label }}</h4></td>
+                </tr>
+                <tr>
+                    <td>{{ form.doc_file }}</td>
+                    <td>{{ form.table_file }}</td>
+                </tr>
+                </tbody>
+            </table>
+            <button type="submit" class="btn btn-dark" value="Submit">Отправить</button>
+        </form>
+    </div>
+</main>
+<script src="{% static 'boot/js/bootstrap.bundle.js' %}"></script>
+<script src="{% static 'boot/js/bootstrap.js' %}"></script>
+</body>
