--- a/doc_filler/apps/docs_processor/templates/doc_processor/base_generic.html
+++ b/doc_filler/apps/docs_processor/templates/doc_processor/base_generic.html
@@ -12,7 +12,7 @@
                 <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">GitHub</a>
+                <a class="nav-link" href="https://github.com/isbushcar/doc_filler">GitHub</a>
             </li>
         </ul>
     </div>
