Update app structure

--- a/doc_filler/templates/doc_filler/doc_processor/task_failed.html
+++ b/doc_filler/templates/doc_filler/doc_processor/task_failed.html
@@ -1,4 +1,4 @@
-{% extends "doc_processor/base_generic.html" %}
+{% extends "doc_filler/base_generic.html" %}
 {% load static %}
 {% block content %}
     <main role="main" class="container">
