--- a/doc_filler/templates/doc_filler/doc_processor/task_succeed.html
+++ b/doc_filler/templates/doc_filler/doc_processor/task_succeed.html
@@ -1,4 +1,4 @@
-{% extends "doc_processor/base_generic.html" %}
+{% extends "doc_filler/base_generic.html" %}
 {% block content %}
     <main role="main" class="container">
         <div class="card align-items-center w-100 p-3 text-center">
