Add minor cosmetic improvement

--- a/doc_filler/templates/doc_filler/doc_processor/home.html
+++ b/doc_filler/templates/doc_filler/doc_processor/home.html
@@ -1,6 +1,6 @@
 {% extends "doc_filler/base_generic.html" %}
 {% block content %}
-<main role="main" class="container">
+<main role="main" class="container mt-4">
     <div class="card align-items-center w-100 p-3 text-center">
         <h1>Выберите файлы</h1>
         <form method="post" enctype="multipart/form-data">
