--- a/doc_filler/templates/doc_filler/doc_processor/task_failed.html
+++ b/doc_filler/templates/doc_filler/doc_processor/task_failed.html
@@ -1,7 +1,7 @@
 {% extends "doc_filler/base_generic.html" %}
 {% load static %}
 {% block content %}
-    <main role="main" class="container">
+    <main role="main" class="container mt-4">
         <div class="card align-items-center w-100 p-3 text-center">
             <h3>Что-то пошло не так. Убедитесь, что используете правильный формат файлов.
                 Также вы можете <a href="https://t.me/isbushcar">сообщить об ошибке</a>.</h3>
