--- a/doc_filler/templates/doc_filler/doc_processor/task_pending.html
+++ b/doc_filler/templates/doc_filler/doc_processor/task_pending.html
@@ -5,7 +5,7 @@
             location.reload();
         }, 1000)
     </script>
-    <main role="main" class="container">
+    <main role="main" class="container mt-4">
         <div class="card align-items-center w-100 p-3 text-center">
             <h3>Документ собирается, подождите...</h3>
         </div>
