--- a/doc_filler/templates/doc_filler/doc_processor/task_succeed.html
+++ b/doc_filler/templates/doc_filler/doc_processor/task_succeed.html
@@ -1,6 +1,6 @@
 {% extends "doc_filler/base_generic.html" %}
 {% block content %}
-    <main role="main" class="container">
+    <main role="main" class="container mt-4">
         <div class="card align-items-center w-100 p-3 text-center">
             <h3>Получилось! Скачать файл можно по <a href="{{ file_link }}">ссылке</a>.</h3>
             <h3><a href="/">Сгенерировать еще один?</a></h3>
