--- a/doc_filler/templates/doc_filler/base_generic.html
+++ b/doc_filler/templates/doc_filler/base_generic.html
@@ -15,6 +15,25 @@
                 <a class="nav-link" href="https://github.com/isbushcar/doc_filler">GitHub</a>
             </li>
         </ul>
+        {% if user.is_authenticated %}
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <span class="navbar-text mr-2"><b>{{ user.get_username }}</b></span>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href={% url 'logout' %}>Выйти</a>
+                </li>
+            </ul>
+        {% else %}
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href={% url 'login' %}>Войти</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href={% url 'create_user' %}>Зарегистироваться</a>
+                </li>
+            </ul>
+        {% endif %}
     </div>
 </nav>
 {% if messages %}
