--- a/doc_filler/templates/doc_filler/base_generic.html
+++ b/doc_filler/templates/doc_filler/base_generic.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 {% load static %}
+<head>
+    <link rel="shortcut icon" href="{% static 'favicon.ico' %}"/>
+</head>
 <link rel="stylesheet" href="{% static 'boot/css/bootstrap.min.css' %}">
 <link rel="stylesheet" href="{% static 'boot/css/bootstrap.css' %}">
 <body>
